src/test/ui/closures/2229_closure_analysis/pattern-matching-should-fail.stderr
warning: the feature `capture_disjoint_fields` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/pattern-matching-should-fail.rs:1:12
   |
LL | #![feature(capture_disjoint_fields)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #53488 <https://github.com/rust-lang/rust/issues/53488> for more information

error[E0381]: use of possibly-uninitialized variable: `x`
  --> $DIR/pattern-matching-should-fail.rs:10:14
   |
LL |     let c1 = || match x { };
   |              ^^^^^^^^^^^^^^ use of possibly-uninitialized `x`

error[E0381]: borrow of possibly-uninitialized variable: `x`
  --> $DIR/pattern-matching-should-fail.rs:17:14
   |
LL |     let c2 = || match x { _ => () };
   |              ^^       - borrow occurs due to use in closure
   |              |
   |              use of possibly-uninitialized `x`

error[E0381]: borrow of possibly-uninitialized variable: `variant`
  --> $DIR/pattern-matching-should-fail.rs:29:13
   |
LL |     let c = || {
   |             ^^ use of possibly-uninitialized `variant`
LL |
LL |         match variant {
   |               ------- borrow occurs due to use in closure

error[E0381]: borrow of possibly-uninitialized variable: `variant`
  --> $DIR/pattern-matching-should-fail.rs:41:13
   |
LL |     let c = || {
   |             ^^ use of possibly-uninitialized `variant`
LL |
LL |         match variant {
   |               ------- borrow occurs due to use in closure

error[E0381]: use of possibly-uninitialized variable: `g`
  --> $DIR/pattern-matching-should-fail.rs:56:13
   |
LL |       let a = || {
   |  _____________^
LL | |
LL | |
LL | |         match g { };
...  |
LL | |         c();
LL | |     };
   | |_____^ use of possibly-uninitialized `g`

error[E0381]: use of possibly-uninitialized variable: `t`
  --> $DIR/pattern-matching-should-fail.rs:56:13
   |
LL |       let a = || {
   |  _____________^
LL | |
LL | |
LL | |         match g { };
...  |
LL | |         c();
LL | |     };
   | |_____^ use of possibly-uninitialized `t`

error: aborting due to 6 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0381`.
